--- a/button_clicker/index.html
+++ b/button_clicker/index.html
@@ -12,37 +12,37 @@
             <h1 class="title">Dojonary</h1>
             <input type="text" name="search" placeholder="Search" 
             class="search" >
-            <button class="btn login" onclick="login(this)">Login</button>
+            <button class="btn-login" onclick="login(this)">Login</button>
             <!--the argument *this* takes on the name of the button 
             and pass it to Javascript-->
         </div>
         <div class="row">
             <div class="flex-2">
-                <div class="box definition">
+                <div class="box-definition">
                     <div class="left">
                         <h1>ninja</h1>
                         <p><em>noun</em></p>
                         <p>Plural: <em>ninjas</em></p>
-                        <button class="btn like" onclick="message()">13 likes</button>
+                        <button class="btn-like" onclick="message()">13 likes</button>
                     </div>
-                    <p class="definition-text">A practitioner skilled in the 
+                    <p class="text-definition">A practitioner skilled in the 
                     <a href="">Japanese</a> art of <a href="">ninjutsu</a></p>
                 </div>
-                <div class="box definition">
+                <div class="box-definition">
                     <div class="left">
                         <h1>ninja</h1>
                         <p><em>noun</em></p>
                         <p>Plural: <em>ninjas</em></p>
-                        <button class="btn like" onclick="message()">37 likes</button>
+                        <button class="btn-like" onclick="message()">37 likes</button>
                     </div>
-                    <p class="definition-text">A <a href="">programmer</a>who breaks down 
-                    problems with<a href="">zen</a>-like focus</p>
+                    <p class="text-definition">A <a href="">programmer </a>who breaks down 
+                    problems with <a href="">zen</a>-like focus</p>
                 </div>
             </div>
             <div class="flex-1">
                 <div class="box">
-                    <h2>Dojonary is defined by YOU</h2>
-                    <button class="btn add" onclick="hide(this)">Add definition</button>
+                    <h3>Dojonary is defined by YOU</h3>
+                    <button class="btn-add" onclick="hide(this)">Add definition</button>
                     <!--*this* special keyword passes the entire element to Javascript-->
                 </div>
             </div>
