adding img with text in html

--- a/Creating_Website_MacDonald/CH4_/Fig4-1_SimplePic.html
+++ b/Creating_Website_MacDonald/CH4_/Fig4-1_SimplePic.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Two paragraphs, One <picture></picture></title>
+    <title>Two paragraphs, One picture</title>
 </head>
 <body>
     <p>In the next paragraph, you'll see a picture.</p>
-    <p><img src="img/banana.jpg" alt="The banana" style="height: 500px; width: 600px;"></p>
+    <p><img src="img/banana.jpg" alt="The banana" height="400" width="600"></p>
     <p><img src="matador.jpg" alt="There's no picture, so all you get is this alternate text" /></p>
 </body>
 </html>
