MacDonald- fig4-11 tomatoSoupBorder

--- a/Creating_Website_MacDonald/CH4_/fig4-9_TomatoSoupRecipe.html
+++ b/Creating_Website_MacDonald/CH4_/fig4-9_TomatoSoupRecipe.html
@@ -12,6 +12,7 @@
             float: left;
             margin: 10px;
         }
+        
     </style>
     <title>Simple Tomato Soup</title>
 </head>
@@ -49,6 +50,6 @@
     <p>        
         Bring soup back to simmer, then taste and correct seasonings if necessary.        
     </p>
-        
+    <script src="script.js"></script>
 </body>
 </html>
