fig7-3 PessimistReview Styled

--- a/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig7-3_PessimistReviews_Styled1.html
+++ b/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig7-3_PessimistReviews_Styled1.html
@@ -9,17 +9,16 @@
 <body>
     <h1>The Pessimist's Review Site</h1>
 
-    <p>Here you'll learn about the greatest upublished books ever (not) written. Be sure to support this <br />
+    <p id="introductory">Here you'll learn about the greatest upublished books ever (not) written. Be sure to support this <br />
        fictional Web sie with contributions to the author.  PyPal is accepted, but unmarked paper <br>
-       envelopes are proferred.</p>
-
-    <p>The reviews on this Web site do not correspond to reality. Any correspondence, real, imagined, or <br/>
+       envelopes are proferred. <br><br>
+       The reviews on this Web site do not correspond to reality. Any correspondence, real, imagined, or <br/>
        conjured up after a week of sleepless nights and heavy caffeine abuse is purely coincidental.</p>
 
-    <h2>How To Lose Friends and Fail in Life</h2>
+    <h2 class="sub-heading">How To Lose Friends and Fail in Life</h2>
 
-    <p><i>Chris Chu   </i><hr></p>
-    <img src="PessimistReviews_Styled1/scowl_small.jpg" alt="A man scowling"></p>
+    <p class="pic-name"><i>Chris Chu   </i><hr></p>
+    <img src="PessimistReviews_Styled1/scowl_small.jpg" alt="A man scowling" class="scowl_small"></p>
 
     <p>Tired of sabotaging yourself endlessly? With this book, the author Chris Chu explains how to <br>
     level the palying field and take on a challenge you can really master. So throw away thos old <br>
@@ -27,10 +26,11 @@
 
     <p><a href="#">Read more ...</a></p>
 
-    <h2>Europe: Great Places to Miss</h2>
+    <h2 class="sub-heading">Europe: Great Places to Miss</h2>
 
-    <p>Antonio Cervantes</p>
-    <img src="PessimistReviews_Styled1/house_small.jpg" alt="House">
+    <p class="pic-name">Antonio Cervantes <hr></p>
+    <hr>
+    <img src="PessimistReviews_Styled1/house_small.jpg" alt="House" class="house_small">
 
     <p>Europe is brimming with world class attractions: gloriuous are gallerise, charming bed-and- <br>
         breakfast inns, old school restaurants and much more. But who can afford it? This book carefully <br>
