fig7-3 PessimistReview Styled my version

--- a/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig7-3_PessimistReviews_Styled1.html
+++ b/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig7-3_PessimistReviews_Styled1.html
@@ -17,20 +17,19 @@
 
     <h2 class="sub-heading">How To Lose Friends and Fail in Life</h2>
 
-    <p class="pic-name"><i>Chris Chu   </i><hr></p>
-    <img src="PessimistReviews_Styled1/scowl_small.jpg" alt="A man scowling" class="scowl_small"></p>
+    <p class="by-line"><i>Chris Chu</i></p>
+    <img src="PessimistReviews_Styled1/scowl_small.jpg" alt="A man scowling"></p>
 
     <p>Tired of sabotaging yourself endlessly? With this book, the author Chris Chu explains how to <br>
     level the palying field and take on a challenge you can really master. So throw away thos old <br>
     self-help books and start accomplishing something!</p>
 
-    <p><a href="#">Read more ...</a></p>
+    <p class="reviewEnd"><a href="#">Read more ...</a></p>
 
     <h2 class="sub-heading">Europe: Great Places to Miss</h2>
 
-    <p class="pic-name">Antonio Cervantes <hr></p>
-    <hr>
-    <img src="PessimistReviews_Styled1/house_small.jpg" alt="House" class="house_small">
+    <p class="by-line">Antonio Cervantes</p>
+    <img src="PessimistReviews_Styled1/house_small.jpg" alt="House">
 
     <p>Europe is brimming with world class attractions: gloriuous are gallerise, charming bed-and- <br>
         breakfast inns, old school restaurants and much more. But who can afford it? This book carefully <br>
@@ -39,6 +38,6 @@
         of debtor's prison whn you return home. (You did buy a return ticket in advance, right?)
     </p>
 
-    <p><a href="#">Read more ...</a></p>
+    <p class="reviewEnd"><a href="#">Read more ...</a></p>
 </body>
 </html>
