fig7-3 PessimistReview Styled with contextual selectors

--- a/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig7-4_PessimistReviews_Styled1.html
+++ b/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig7-4_PessimistReviews_Styled1.html
@@ -25,7 +25,7 @@
                 <img src="PessimistReviews_Styled1/scowl_small.jpg" alt="A man scowling"></p>
         
                 <p>Tired of sabotaging yourself endlessly? With this book, the author Chris Chu explains how to <br>
-                level the palying field and take on a challenge you can really master. So throw away thos old <br>
+                level the palying field and take on a challenge you can really master. So throw away those old <br>
                 self-help books and start accomplishing something!</p>
         
                 <p class="reviewEnd"><a href="#">Read more ...</a></p>
