--- a/CSS_Bootcamp_Master_CSS_Lomidze/Grand Hotel/index.html
+++ b/CSS_Bootcamp_Master_CSS_Lomidze/Grand Hotel/index.html
@@ -11,10 +11,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Dhurjati&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Grand Hotel</title>
-    
+
 </head>
 <body>
-    <i class="fa-solid fa-house"></i>
+    <!-- navbar -->
+    <div class="navbar">
+        <!-- sidebar -->
+        <div class="sidebar">
+            <div class="menu-icon">
+                <div class="line line-1"></div>
+                <div class="line line-2"></div>
+                <div class="line line-3"></div>
+            </div>
+
+            <ul class="social-icons-list">
+                <li>
+                    <a href="" class="social-link"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li>
+                    <a href="" class="social-link"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="" class="social-link"><i class="fa-brands fa-tiktok"></i></a>
+                </li>
+                <li>
+                    <a href="" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+            </ul>
+
+            <div class="year">
+                <p>2018</p>
+            </div>
+
+        </div>
+        <!-- end of sidebar -->
+    </div>
+    <!-- end of navbar -->
 </body>
 </html>
 
