--- a/CSS_Bootcamp_Master_CSS_Lomidze/Furniture Store/index.html
+++ b/CSS_Bootcamp_Master_CSS_Lomidze/Furniture Store/index.html
@@ -11,5 +11,41 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 </head>
 <body>
     
+    <div class="container">
+        <!-- navbar -->
+        <ul class="social-icons">
+            <li class="social-icon-item">
+                <a href="" class="social-icon-link"><i class="fab fa-facebook-square social-icon"></i></a>
+            </li>
+            <li class="social-icon-item">
+                <a href="" class="social-icon-link"><i class="fab fa-linkedin social-icon"></i></a>
+            </li>
+            <li class="social-icon-item">
+                <a href="" class="social-icon-link"><i class="fab fa-twitter-square social-icon"></i></a>
+            </li>
+            <li class="social-icon-item">
+                <a href="" class="social-icon-link"><i class="fab fa-instagram social-icon"></i></a>
+            </li>
+        </ul>
+
+        <nav class="first-nav">
+            <ul class="first-nav-list">
+                <li class="first-nav-item">
+                    <a href="#" class="first-nav-link"><i class="fas fa-sign-in-alt"></i>Sign Up / Log In</a>
+                </li>
+                <li class="first-nav-item">
+                    <a href="#" class="first-nav-link"><i class="fas fa-shopping-cart"></i>Cart(<span>2 Items</span>)</a>
+                </li>
+                <li class="first-nav-item">
+                    <a href="#" class="first-nav-link"><i class="fas fa-truck"></i>Order Now</a>
+                </li>
+                <li class="first-nav-item">
+                    <a href="#" class="first-nav-link"><i class="fas fa-heart"></i>Wish List</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- end of navbar -->
+    </div>
+
 </body>
 </html>
