--- a/Modern_HTML_CSS_Traversy/CSS/12_form_styling/12_form_styling.html
+++ b/Modern_HTML_CSS_Traversy/CSS/12_form_styling/12_form_styling.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sign Up</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
                     <input type="text" name="firstName" id="first-name" />
                 </div>
                 <div class="form-group">
-                    <label for="last-name">last Name</label>
+                    <label for="last-name">Last Name</label>
                     <input type="text" name="lastName" id="last-name" />
                 </div>
                 <div class="form-group">
