Dojo_Reviews: user card practice 03 complete

--- a/Coding_Dojo_Repeats/The flex box/The User Card/the_user_card_03.html
+++ b/Coding_Dojo_Repeats/The flex box/The User Card/the_user_card_03.html
@@ -11,7 +11,13 @@
         <div class="nav">
             <img src="/img/user-circle.png" alt="user-circle">
         </div>
-        <div class="content"></div>
+        <div class="content">
+            <h1>Jane Doe</h1>
+            <p><img src="/img/map-marker.png" alt="map-marker"> Seattle</p>
+            <p>Developer | Engineer | Problem Solver <br>
+            Master of shadows and the Internet!</p>
+            <p><a href="#"><img src="img/gear.png" alt="gear"> edit profile</a></p>
+        </div>
     </div>
 </body>
 </html>
