--- a/Web_Development_HTML_Felke-Morris/CSS/pacific_trails_case_study/index.html
+++ b/Web_Development_HTML_Felke-Morris/CSS/pacific_trails_case_study/index.html
@@ -19,7 +19,7 @@
         </nav>
         <main>
             <h2>Enjoy Nature in Luxury</h2>
-            <p>Pacific Trails Resort offers a special lodging experience on<br />
+            <p><span class="">Pacific Trails Resort</span> offers a special lodging experience on<br />
                 the California North Coast. Relax in serenity with panoramic<br />
                 views of the Pacific Ocean.
             </p>
