Felke: Yoga Case Study with CSS

--- a/Web_Development_HTML_Felke-Morris/CSS/yoga_studio_case_study/index.html
+++ b/Web_Development_HTML_Felke-Morris/CSS/yoga_studio_case_study/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="yoga.css">
     <title>Path of Light Yoga Studio</title>
 </head>
 <body>
@@ -11,9 +12,9 @@
             <h1>Path of Light Yoga Studio</h1>
         </header>
         <nav>
-            <a href="">Home</a><br />
-            <a href="">Classes</a><br />
-            <a href="">Schedule</a><br />
+            <a href="">Home</a>&nbsp;
+            <a href="">Classes</a>&nbsp;
+            <a href="">Schedule</a>&nbsp;
             <a href="">Contact</a>
         </nav>
         <main>
