Felke: Pacific Trails Case Study with CSS

--- a/Web_Development_HTML_Felke-Morris/CSS/pacific_trails_case_study/index.html
+++ b/Web_Development_HTML_Felke-Morris/CSS/pacific_trails_case_study/index.html
@@ -19,7 +19,7 @@
         </nav>
         <main>
             <h2>Enjoy Nature in Luxury</h2>
-            <p><span class="">Pacific Trails Resort</span> offers a special lodging experience on<br />
+            <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on<br />
                 the California North Coast. Relax in serenity with panoramic<br />
                 views of the Pacific Ocean.
             </p>
@@ -33,7 +33,7 @@
             </ul>
 
             <p>
-                Pacific Trails Resort<br />
+                <span class="resort">Pacific Trails Resort</span><br />
                 12010 Pacific trails Road<br />
                 Zephyr, CA  95555<br /><br />
 
