--- a/Web_Development_HTML_Felke-Morris/CSS/javajam_case_study/menu.html
+++ b/Web_Development_HTML_Felke-Morris/CSS/javajam_case_study/menu.html
@@ -18,18 +18,18 @@
             <a href="#">Jobs</a>&nbsp;
         </nav>
         <main>
-            <h2>Relax At JavaJam</h2>
-            <ul>
-                <li>Specialty Coffee and Tea</li>
-                <li>Bagels, Muffins, and  Organic Snacks</li>
-                <li>Music and Poetry Readings</li>
-                <li>Open Mic Night Every Friday</li>
-            </ul>
-            <p>
-                54321 Route 42<br />
-                Ellison Bay, WI 54210<br />
-                888-555-5555
-            </p>
+            <h2>Coffee at JavaJam</h2>
+            <dl>
+                <dt>Just Java</dt>
+                <dd>Regular house blend, decaffeinated coffee, or flavor of day.<br />
+                    Endless Cup $2.00</dd>
+                <dt>Cafe au Lait</dt>
+                <dd>House blended coffee infused into a smooth steamed milk.<br />
+                    Single $2.00 Double $3.00</dd>
+                <dt>Iced Cappuccino</dt>
+                <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br />
+                    Single $4.75 Double $5.75</dd>
+            </dl>
         </main>
         <footer>
             Copyright &copy; 2016 JavaJam Coffee House<br />
