--- a/Web_Development_HTML_Felke-Morris/Graphics/practice4_6/index.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/practice4_6/index.html
@@ -15,11 +15,10 @@
     <title>figure with caption</title>
 </head>
 <body>
-    <div class="figure">
+    <figure>
         <!-- <img src="myisland.jpg" alt="" width="640" height="480"> -->
     <img src="myisland.jpg" alt="" width="640" height="480">
     <p>Tropical Island Getaway</p>
-    </div>
-    
+    </figure>
 </body>
 </html>
