Felke: practice 4.9 Trillium background-image background-position property

--- a/Web_Development_HTML_Felke-Morris/Graphics/practice4_9/index.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/practice4_9/index.html
@@ -6,6 +6,9 @@
 <style>
 body { background-color:#f4ffe4;
        color:#333333;
+       /* background: url(trilliumfoot.gif) no-repeat right bottom,
+       url(trilliumgradient.png); */
+       background: url(trilliumgradient.png);
 }
 h1 { background-color:#d5edb3;  
      color:#5c743d;
@@ -19,6 +22,12 @@ h2 { background-color:#d5edb3;
 
 }
 .companyname { color: #5c743d;
+}
+footer {
+  background-image: url(trilliumfoot.gif);
+  background-repeat: no-repeat;
+  background-position: right top;
+  height: 75px;
 }
 </style>
 </head>
