--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_javajam_case_study/music.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_javajam_case_study/music.html
@@ -18,23 +18,19 @@
             <a href="#">Jobs</a>&nbsp;
         </nav>
         <main>
-            <img src="windingroad.jpg" alt="windingroad" alt="windingroad" height="" width="" align="right">
-            <h2>Follow the Winding Road to JavaJam</h2>
-            <p>"We're a little out of the way, but take a drive down Route 42 to JavaJam today!
-                Indulge in our locally roasted free-trade coffee and home-made pastries.  You'll feel right at home at JavaJam!"
-            </p>
             <h3>JavaJam Coffee House features</h3>
-            <ul>
-                <li>Specialty Coffee and Tea</li>
-                <li>Bagels, Muffins, and  Organic Snacks</li>
-                <li>Music and Poetry Readings</li>
-                <li>Open Mic Night Every Friday</li>
-            </ul>
-            <p>
-                54321 Route 42<br />
-                Ellison Bay, WI 54210<br />
-                888-555-5555
+            <p>"The first Friday night each month at JavaJam is a special night. Join us from 8 pm to 11 pm for some music you won't want to miss!"
             </p>
+            <h4>January</h4>
+            <div class="details">
+                <img src="melaniethumb.jpg" alt="">
+                Melanie Morris entertains with her melodic folk style.
+            </div>
+            <h4>February</h4>
+            <div class="details">
+                <img src="gregthumb.jpg" alt="">
+                Tahoe Greg is back from his tour. New songs. New stories.
+            </div>
         </main>
         <footer>
             Copyright &copy; 2016 JavaJam Coffee House<br />
