Felke: ch4 javajam case study 04

--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_javajam_case_study/music.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_javajam_case_study/music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="javajam.css">
-    <title>JavaJam Coffee House</title>
+    <title>JavaJam Coffee Music</title>
 </head>
 <body>
     <div id="wrapper">
@@ -18,7 +18,7 @@
             <a href="#">Jobs</a>&nbsp;
         </nav>
         <main>
-            <h3>JavaJam Coffee House features</h3>
+            <h2>Music at JavaJam</h2>
             <p>"The first Friday night each month at JavaJam is a special night. Join us from 8 pm to 11 pm for some music you won't want to miss!"
             </p>
             <h4>January</h4>
