--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_fishcreekanimalhospital_case_study/index.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_fishcreekanimalhospital_case_study/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="fishcreek.css">
     <title>Fish Creek Animal Hosipal</title>
 </head>
 <body>
     <div id="wrapper">
         <header>
-            <h1>Fish Creek Animal Hosipal</h1>
+            <h1><img src="fishcreeklogo.gif" alt=""></h1>
         </header>
         <nav>
-            <b><a href="#">Home</a></b> &nbsp;
-            <b><a href="services.html">Services</a></b> &nbsp;
-            <b><a href="#">Ask the Vet</a></b> &nbsp;
-            <b><a href="#">Contact</a></b> &nbsp;
+            <b><a href="#"><img src="home.gif" alt=""></a></b> &nbsp;
+            <b><a href="services.html"><img src="services.gif" alt=""></a></b> &nbsp;
+            <b><a href="#"><img src="askthevet.gif" alt=""></a></b> &nbsp;
+            <b><a href="#"><img src="contact.gif" alt=""></a></b> &nbsp; <br />
         </nav>
         <main>
             <dl>
@@ -43,6 +44,10 @@
             </div>
         </main>
         <footer>
+            <b><a href="#">Home</a></b> &nbsp;
+            <b><a href="services.html">Services</a></b> &nbsp;
+            <b><a href="#">Ask the Vet</a></b> &nbsp;
+            <b><a href="#">Contact</a></b> &nbsp; <br />
             Copyright &copy; Fish Creek Animal Hosipal<br />
                     haendel@jean.com
         </footer>
