Ch4 Practice 4.1 box-shadow property

--- a/Web_Development_HTML_Felke-Morris/Graphics/practice4_11/index.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/practice4_11/index.html
@@ -4,27 +4,12 @@
 <title>Lighthouse Bistro</title>
 <meta charset="utf-8">
 <style>
-     #wrapper {
-          margin: 0 auto;
-          width: 800px; min-width: 800px; max-width: 960px;
-          padding: 20px;
-     }
-body {background-image: url(background.jpg);
-      font-family: Arial, Verdana, sans-serif;
-	  }
-h1 { background-image: url(lighthouselogo.jpg);
-	 background-repeat: no-repeat;
-	 height: 100px; width: 650px; font-size: 3em;
+   h1{
+     background-image: url(lighthouselogo.jpg);
+     background-repeat: no-repeat;
+     height: 100px; width: 650px; font-size: 3em;
      padding-left: 150px; padding-top: 30px;
-     border: 1px solid #000033;
-     border-radius: 15px; }
-h2 { color: #000033; 
-     font-family: arial, sans-serif;
-}
-nav { word-spacing: 2em; }
-footer { font-size: .80em;
-          font-style: italic;
-}
+   }
 </style>
 </head>
 <body>
