Ch4 Practice 4.12 kayak Door County with box shadow

--- a/Web_Development_HTML_Felke-Morris/Graphics/practice4_12/index.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/practice4_12/index.html
@@ -16,13 +16,13 @@ body {
 }
 header {
   background-color: #000033; color:#ff9;
-  background-image: url(headerbackblue.jpg);
+  /* background-image: url(headerbackblue.jpg); */
   background-position: right;
   background-repeat: no-repeat;
   height: 80px;
   padding-top: 5px;
   padding-left: 2em;
-  text-shadow: 1px 1px 1ppzz #fff;
+  text-shadow: 1px 1px 1px #fff;
 }
 nav {
   word-spacing: 1em;
