--- a/Web_Development_HTML_Felke-Morris/Graphics/practice4_7/index.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/practice4_7/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        #wrapper {
+            width: 960px;
+            margin: 0 auto;
+        }
+        header {
+            width: 96;
+        }
         footer {
             font-size: small;
             font-style: italic;
@@ -16,39 +23,43 @@
         }
         main {
             background-image: url(heroback.jpg);
-            background-repeat: no-repeat;
+            background-repeat: no-repeat;  
         }
     </style>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Practice4.4_KayakDoorCounty.net</title>
 </head>
 <body>
-    <header>
-        <h1><img src="kayakdc.gif" alt="" width="500" height="60"></h1>
-    </header>
-    <nav id="bar">
-        <a href="index.html"><img src="home.gif" alt="Home"></a>
-        <a href="tours.html"><img src="tours.gif" alt=""></a>
-        <a href="reservation.html"><img src="reservations.gif" alt=""></a>
-        <a href="contact.html"><img src="contact.gif" alt=""></a>
-    </nav>
-    <main>
-        <h2>Your next adventure is only a paddle away ...</h2>
-        <p>Take a guided kayak tour while you <br />explore the shoreline of scenic Door County.</p>
-        <h3>Feature tours this week:</h3>
-        <ul>
-            <li>Cana Island</li>
-            <li>Mink River</li>
-            <li>Europe Lake</li>
-        </ul>
-    </main>
-    <footer>
-        <nav>
-            <a href="">Home</a> &nbsp;
-            <a href="">Tours</a> &nbsp;
-            <a href="">Reservations</a> &nbsp;
-            <a href="">Contact</a> &nbsp;
+    <div id="wrapper">
+        <header>
+            <h1><img src="kayakdc.gif" alt="" width="500" height="60"></h1>
+        </header>
+        <nav id="bar">
+            <a href="index.html"><img src="home.gif" alt="Home"></a>
+            <a href="tours.html"><img src="tours.gif" alt=""></a>
+            <a href="reservation.html"><img src="reservations.gif" alt=""></a>
+            <a href="contact.html"><img src="contact.gif" alt=""></a>
         </nav>
-        Copyright &copy; 2024 KayakDoorCounty.net
-    </footer>
+        <main>
+            <h2>Your next adventure is only a paddle away ...</h2>
+            <p>Take a guided kayak tour while you <br />explore the shoreline of scenic Door County.</p>
+            <h3>Feature tours this week:</h3>
+            <ul>
+                <li>Cana Island</li>
+                <li>Mink River</li>
+                <li>Europe Lake</li>
+            </ul>
+        </main>
+        <footer>
+            <nav>
+                <a href="">Home</a> &nbsp;
+                <a href="">Tours</a> &nbsp;
+                <a href="">Reservations</a> &nbsp;
+                <a href="">Contact</a> &nbsp;
+            </nav>
+            Copyright &copy; 2024 KayakDoorCounty.net
+        </footer>
+    </div>
+    
 </body>
 </html>
