Ch4 Fish Creek Animal Hospital services.html

--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_fishcreekanimalhospital_case_study/services.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_fishcreekanimalhospital_case_study/services.html
@@ -9,41 +9,31 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>Fish Creek Animal Hosipal</h1>
+            <h1><img src="fishcreeklogo.gif" alt=""></h1>
         </header>
         <nav>
-            <b><a href="index.html">Home</a></b> &nbsp;
-            <b><a href="#">Services</a></b> &nbsp;
-            <b><a href="#">Ask the Vet</a></b> &nbsp;
-            <b><a href="#">Contact</a></b> &nbsp;
+            <b><a href="index.html"><img src="home.gif" alt=""></a></b> &nbsp;
+            <b><a href="#"><img src="services.gif" alt=""></a></b> &nbsp;
+            <b><a href="#"><img src="askthevet.gif" alt=""></a></b> &nbsp;
+            <b><a href="#"><img src="contact.gif" alt=""></a></b> &nbsp;
         </nav>
         <main>
             <dl>
-                <dt><b>Medical Services</b></dt>
+                <dt><p>Our dog, Sparky, likes to eat whatever the kids are snacking on. Is it OK for the dog to eat chocolate?</p>
+                </dt>
+
                 <dd>
-                    We offer state-of-the-art equipment and technology.
-                </dd>
-                <dt><b>Surgical Services</b></dt>
-                <dd>
-                    Full range of surgical procedures including orthopedics and emergency surgeries.
-                </dd>
-                <dt><b>Dental Care</b></dt>
-                <dd>
-                    A dental exam can determine whether your pet needs preventive dental care such<br />
-                    as scaling and polishing.
-                </dd>
-                <dt><b>House Calls</b></dt>
-                <dd>
-                    The elderly, physically challenged, and multiple pet households often find our<br />
-                    in-home veterinary service helpful and convienent.
-                </dd>
-                <dt><b>Emergencies</b></dt>
-                <dd>
-                    At least one of our doctors is on call every day and night.
+                    <p>Chocolate is toxic to dogs.  Please do not feed your dog chocolate.  Try playing a game with your chlidrn -- when you feed them people treats, they can feed Sparky dog treats.
+                    </p>
                 </dd>
             </dl>
+
         </main>
         <footer>
+            <b><a href="#">Home</a></b> &nbsp;
+            <b><a href="services.html">Services</a></b> &nbsp;
+            <b><a href="#">Ask the Vet</a></b> &nbsp;
+            <b><a href="#">Contact</a></b> &nbsp; <br />
             Copyright &copy; Fish Creek Animal Hosipal<br />
                     haendel@jean.com
         </footer>
