--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/pacific3_33.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/pacific3_33.html
@@ -9,16 +9,14 @@
 <body>
     <header><h1>Pacific Trails Resort</h1></header>
     <nav>
-        <b>
             <a href="index.html">Home</a>&nbsp;
             <a href="yurts.html">Yurts</a>&nbsp;
             <a href="activities.html">Activities</a>&nbsp;
             <a href="reservations.html">Reservations</a>
-        </b>
     </nav>
     <main>
         <h2>Enjoy Nature in Luxury</h2>
-        <p>Pacific Trails Resort offers a special lodging experience on the California North<br />
+        <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North<br />
             Coast. Relax in serenity with panoramic views of the Pacific Ocean.
         </p>
         <ul>
@@ -28,19 +26,15 @@
             <li>Guided hiking tours of the redwoods</li>
         </ul>
         <div>
-            Pacific Trails Resort <br />
+            <span class="resort">Pacific Trails Resort</span><br />
             12010 Pacific Trails Road <br />
             Zephyr, CA  95555 <br /><br />
             888-555-5555 <br /><br />
         </div>
     </main>
     <footer>
-        <small>
-            <i>
-                Copyright &copy; 2016 Pacific Trails Resort <br />
-                haendel.jean@gmail.com
-            </i>
-        </small>
+            Copyright &copy; 2016 Pacific Trails Resort <br />
+            haendel.jean@gmail.com
     </footer>
 </body>
 </html>
