Ch4 Pacific Trails Case Study-06

--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/pacific3_33.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/pacific3_33.html
@@ -7,7 +7,8 @@
     <title>Pacific Trails</title>
 </head>
 <body>
-    <header><h1>Pacific Trails Resort</h1></header>
+    <div id="wrapper">
+        <header><h1>Pacific Trails Resort</h1></header>
     <nav>
             <a href="index.html">Home</a>&nbsp;
             <a href="yurts.html">Yurts</a>&nbsp;
@@ -36,5 +37,7 @@
             Copyright &copy; 2016 Pacific Trails Resort <br />
             haendel.jean@gmail.com
     </footer>
+    </div>
+    
 </body>
 </html>
