--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/yurts3_34.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/yurts3_34.html
@@ -7,7 +7,8 @@
     <title>Pacific Trails</title>
 </head>
 <body>
-    <header><h1>Pacific Trails Resort</h1></header>
+    <div id="wrapper">
+        <header><h1>Pacific Trails Resort</h1></header>
     <nav>
             <a href="index.html">Home</a>&nbsp;
             <a href="yurts.html">Yurts</a>&nbsp;
@@ -38,5 +39,7 @@
             Copyright &copy; 2016 Pacific Trails Resort <br />
             <a href=""><small><i>haendel.jean@gmail.com</i></small></a>
     </footer>
+    </div>
+    
 </body>
 </html>
