--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogaClasses2_45.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogaClasses2_45.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yoga Studio</title>
+    <title>Path of Light Yoga Studio::Classes</title>
 </head>
 <body>
     <header>
@@ -16,23 +16,25 @@
         <a href="contact.html">Contact</a></b>
     </nav>
     <main>
-        <h2>Find Your Inner Light</h2>
+        <h2>Yoga Classes</h2>
         <div>
-            <p>Path of Light Yoga Studio provides all levels of yoga practice in a tranquil, peaceful environment.  Whether you are new <br /> 
-            to yoga or an experienced practitioner, our dedicated instructors can develop a practice to meet your needs. Let your <br /> 
-            inner light shine at the Path Of Light Yoga Studio.</p>
-            <ul>
-                <li>Hatha, Vinyasa, and Restorative Yoga Classes</li>
-                <li>Drop-ins welcome</li>
-                <li>Mats, blocks, and blankets provided</li>
-                <li>Relax in our Serenity Lounge before or after your class</li>
-            </ul>
-            <p>Path of Light Yoga Studio <br />
-               612 Serenity Way <br />
-               El Dorado, CA  96162 <br /><br />
+            <dl>
+                <dt><strong>Gentle Hatha Yoga</strong></dt>
+                <dd>Intended for beginners and anyone widing a grounded foundation in the practice of yoga, this 60 minute class of <br />
+                poses and slow movement focuses on asana  (proper alignment and posture), pranayama (breath work), and <br />
+                guided meditation to foster your mind and body connection.</dd>
 
-               888-555-5555<br />
-            </p>
+                <dt><strong>Vinyasa Yoga</strong></dt>
+                <dd>Intended for beginners and anyone widing a grounded foundation in the practice of yoga, this 60 minute class of <br />
+                poses and slow movement focuses on asana  (proper alignment and posture), pranayama (breath work), and <br />
+                guided meditation to foster your mind and body connection.</dd>
+
+                <dt><strong>Restorative Yoga</strong></dt>
+                <dd>Intended for beginners and anyone widing a grounded foundation in the practice of yoga, this 60 minute class of <br />
+                poses and slow movement focuses on asana  (proper alignment and posture), pranayama (breath work), and <br />
+                guided meditation to foster your mind and body connection.</dd>
+            </dl>
+            
         </div>
     </main>
     <footer>
