Felke: Yoga Studio Case Study-07

--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogaClasses4_57.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogaClasses4_57.html
@@ -19,7 +19,7 @@
         </nav>
         <main>
             <div id="hero">
-                <img src="images/yogamat.jpg" alt="">
+                <img src="images/yogamat.jpg" alt="" width="100%">
             </div>
             <h2>Yoga Classes</h2>
             <dl>
