--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogaSchedule4_58.html
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogaSchedule4_58.html
@@ -19,7 +19,7 @@
         </nav>
         <main>
             <div id="hero">
-                <img src="images/yogalounge.jpg" alt="">
+                <img src="images/yogalounge.jpg" alt="" width="100%" height="">
             </div>
             <h2>Yoga Schedule</h2>
             <p>Mats, blocks, and blankets provided.  Please arrive 10 minutes 
