CH2: HTML Essentials

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/lists.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/lists.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Unordered List</title>
 </head>
 <body>
     <h1>HTML & CSS Sandbox - Lists</h1>
+    <ul>
+        <li>Item One</li>
+        <li>Item One</li>
+    </ul>
 </body>
 </html>
