--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/lists.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/lists.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unordered List</title>
+    <title>Unordered and Ordered List</title>
 </head>
 <body>
     <h1>HTML & CSS Sandbox - Lists</h1>
