CH2: HTML Essentials

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/anchors.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/anchors.html
@@ -22,6 +22,7 @@
 
     <p id="services">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos architecto alias, necessitatibus nisi quisquam explicabo qui optio sunt hic odio dolorem ex, illo id eligendi perspiciatis nemo ipsa? Voluptas expedita, voluptate dolorem nemo odio provident facere numquam ipsa, amet eaque quaerat doloremque ipsum fugiat. Totam architecto sit consequatur dolore corporis repellat omnis nesciunt in a, consequuntur quidem repudiandae dolorem sequi tempore. Optio dicta doloribus error, quam nisi atque itaque, repellendus quasi necessitatibus quibusdam asperiores doloremque officiis accusantium assumenda nulla laboriosam similique fugiat labore odit mollitia libero. Assumenda consequuntur est non nemo veniam maiores ullam sapiente ex voluptates, suscipit facilis a.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ab iste ea officia voluptas, similique error ullam tempore quam blanditiis eos provident architecto aperiam itaque voluptates nemo fugiat? Incidunt, dicta?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolor ipsam facilis nihil accusamus debitis laboriosam reprehenderit ad optio illum enim nemo eum, temporibus neque provident qui eveniet quia voluptatem!</p>
 
 </body>
 </html>
