--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/anchors.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/anchors.html
@@ -17,12 +17,18 @@
     <a href="about.html">About Page</a>
 
     <h2>Internal Link</h2>
+    <a href="#services">Go to services</a>
 
     <h2>Email Links</h2>
     <a href="mailto:example@example.com">Send an email</a>
     
+    <h2>File Links</h2>
+    <a href="invoice.pdf">Download Document</a>
+
+    <h2>Titel Attribute</h2>
+    <a href="about.html" title="About Traversy Media">About Page</a>
+
     
-    <a href="#services">Go to services</a>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ea labore in, amet error, dicta praesentium optio qui veritatis a est itaque et exercitationem earum ut aspernatur. Aut ipsam minima, quos aliquid odit hic dolore distinctio fuga reprehenderit sed corrupti quod cumque voluptatum ipsum nam esse neque consectetur provident. Nobis?</p>
 
     <p id="services">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos architecto alias, necessitatibus nisi quisquam explicabo qui optio sunt hic odio dolorem ex, illo id eligendi perspiciatis nemo ipsa? Voluptas expedita, voluptate dolorem nemo odio provident facere numquam ipsa, amet eaque quaerat doloremque ipsum fugiat. Totam architecto sit consequatur dolore corporis repellat omnis nesciunt in a, consequuntur quidem repudiandae dolorem sequi tempore. Optio dicta doloribus error, quam nisi atque itaque, repellendus quasi necessitatibus quibusdam asperiores doloremque officiis accusantium assumenda nulla laboriosam similique fugiat labore odit mollitia libero. Assumenda consequuntur est non nemo veniam maiores ullam sapiente ex voluptates, suscipit facilis a.</p>
