--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/images.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/images.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>HTML & CSS Sandbox - Images</h1>
-    <img src="images/landscape.jpg" alt="landscape" />
+    <!-- Relative Path -->
+    <!-- <img src="images/landscape.jpg" alt="landscape" /> -->
+
+    <!-- Absolute Path -->
+    <!-- <img src="https://picsum.photos/200/300" alt="Random"> -->
+
+    <!-- Width and Height -->
+    <!-- <img src="images/landscape.jpg" alt="landscape" width="400" height="300" title="A beautiful landscape"/> -->
+
+    <!-- fig and figcaption -->
+     <figure>
+        <img src="images/landscape.jpg" alt="landscape" width="400" height="300" />
+        <figcaption>Fig.1 - Beautiful landscape</figcaption>
+     </figure>
+    
 </body>
 </html>
