--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/pricing-grid/index.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/pricing-grid/index.html
@@ -8,10 +8,47 @@
 <body>
     <div class="container">
         <div class="pricing">
+            <!-- Item 1 -->
             <div class="card">
                 <h2>Free</h2>
                 <p class="price"><sup>$</sup>0</p>
-                <p class="price-info">Great for Starters</p>
+                <p class="price-info"><strong>Great for Starters</strong></p>
+                <p class="main-text">Discover how to crate your first projects.</p>
+                <a href="#" class="btn">Get Started</a>
+                <ul>
+                    <li>1 User</li>
+                    <li>5 Projects</li>
+                    <li>10GB Storage</li>
+                    <li>Priority Support</li>
+                </ul>
+            </div>
+            <!-- Item 2 -->
+            <div class="card">
+                <h2>Pro</h2>
+                <p class="price"><sup>$</sup>7<span>/mo</span></p>
+                <p class="price-info"><strong>For Planned Projects</strong></p>
+                <p class="main-text">Discover how to crate your first projects.</p>
+                <a href="#" class="btn">Get Started</a>
+                <ul>
+                    <li>5 User</li>
+                    <li>50 Projects</li>
+                    <li>100GB Storage</li>
+                    <li>Priority Support</li>
+                </ul>
+            </div>
+            <!-- Item 3 -->
+            <div class="card">
+                <h2>Enterprise</h2>
+                <p class="price"><sup>$</sup>12<span>/mo</span></p>
+                <p class="price-info"><strong>Great for Starters</strong></p>
+                <p class="main-text">Discover how to crate your first projects.</p>
+                <a href="#" class="btn">Get Started</a>
+                <ul>
+                    <li>1 User</li>
+                    <li>5 Projects</li>
+                    <li>10GB Storage</li>
+                    <li>Priority Support</li>
+                </ul>
             </div>
         </div>
     </div>
