CH2: HTML Essentials - Pricing Grid

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/pricing-grid/index.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/pricing-grid/index.html
@@ -27,7 +27,7 @@
                 <h2>Pro</h2>
                 <p class="price"><sup>$</sup>7<span>/mo</span></p>
                 <p class="price-info"><strong>For Planned Projects</strong></p>
-                <p class="main-text">Discover how to crate your first projects.</p>
+                <p class="main-text">Bring your designs to the next level and export them.</p>
                 <a href="#" class="btn">Get Started</a>
                 <ul>
                     <li>5 User</li>
@@ -40,13 +40,13 @@
             <div class="card">
                 <h2>Enterprise</h2>
                 <p class="price"><sup>$</sup>12<span>/mo</span></p>
-                <p class="price-info"><strong>Great for Starters</strong></p>
-                <p class="main-text">Discover how to crate your first projects.</p>
+                <p class="price-info"><strong>For Professional Use</strong></p>
+                <p class="main-text">Enjoy limitless use with interactive export options.</p>
                 <a href="#" class="btn">Get Started</a>
                 <ul>
-                    <li>1 User</li>
-                    <li>5 Projects</li>
-                    <li>10GB Storage</li>
+                    <li>Unlimited Users</li>
+                    <li>Unlimited Projects</li>
+                    <li>Unlimited Storage</li>
                     <li>Priority Support</li>
                 </ul>
             </div>
