--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/labels/labels.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/labels/labels.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>HTML & CSS Sandbox - Labels & Text Based Inputs</h1>
+
+    <form>
+        <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" />
+        </div>
+        <br />
+        <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" />
+        </div>
+        <br />
+        <div>
+            <label for="password">Password</label>
+            <input type="password" id="password" />
+        </div>
+        <div>
+            <input type="submit" value="Submit">
+        </div>
+    </form>
 </body>
 </html>
