ch3: HTML checkboxes and radio buttons

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/Select boxes and text areas/checkboxes.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/Select boxes and text areas/checkboxes.html
@@ -8,7 +8,16 @@
 <body>
     <form>
         <label for="html">
-            <input type="checkbox" name="languages" id="html" />HTML
+            <input type="checkbox" name="languages" id="html" value="html"/>HTML
+        </label>
+        <label for="css">
+            <input type="checkbox" name="languages" id="css"  value="css"/>HTML
+        </label>
+        <label for="javascript">
+            <input type="checkbox" name="languages" id="javascript" value="javascript" />HTML
+        </label>
+        <label for="php">
+            <input type="checkbox" name="languages" id="php"  value="php"/>HTML
         </label>
     </form>
 </body>
