--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/Select boxes and text areas/checkboxes.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/Select boxes and text areas/checkboxes.html
@@ -8,16 +8,28 @@
 <body>
     <form>
         <label for="html">
-            <input type="checkbox" name="languages" id="html" value="html"/>HTML
+            <input type="checkbox" name="languages" id="html" value="html" disabled/>HTML
         </label>
         <label for="css">
-            <input type="checkbox" name="languages" id="css"  value="css"/>HTML
+            <input type="checkbox" name="languages" id="css"  value="css" checked/>CSS
         </label>
         <label for="javascript">
-            <input type="checkbox" name="languages" id="javascript" value="javascript" />HTML
+            <input type="checkbox" name="languages" id="javascript" value="javascript" />Javascript
         </label>
         <label for="php">
-            <input type="checkbox" name="languages" id="php"  value="php"/>HTML
+            <input type="checkbox" name="languages" id="php"  value="php"/>PHP
+        </label>
+    </form>
+    <h2>Product Size</h2>
+    <form>
+        <label for="small">
+            <input type="radio" name="size" id="small" value="small" />Small
+        </label>
+        <label for="medium">
+            <input type="radio" name="size" id="medium" value="medium" checked />Medium
+        </label>
+        <label for="large">
+            <input type="radio" name="size" id="large" value="large" />Large
         </label>
     </form>
 </body>
