Ch3: apartment challenge

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments02.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments02.html
@@ -27,8 +27,13 @@
             </div>
             <br />
             <div>
-                <label for="bedrooms">Bedrooms</label>
-                <input type="number" name="bedrooms" id="bedrooms" />
+                <label for="bathrooms">Babathrooms</label>
+                <input type="number" name="bathrooms" id="bathrooms" />
+            </div>
+            <br />
+            <div>
+                <label for="bathrooms">Babathrooms</label>
+                <input type="number" name="bathrooms" id="bathrooms" />
             </div>
             <br />
         </form>
