Ch3: apartment challenge

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments02.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments02.html
@@ -36,6 +36,14 @@
                 <input type="number" name="bathrooms" id="bathrooms" />
             </div>
             <br />
+            <div>
+                <label for="pets">
+                    Pets
+                    <input type="checkbox" name="pets" id="pets"/>
+                </label>
+                
+            </div>
+            <br />
         </form>
     </main>
 </body>
