Ch3: apartment challenge

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments02.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments02.html
@@ -27,12 +27,7 @@
             </div>
             <br />
             <div>
-                <label for="bathrooms">Babathrooms</label>
-                <input type="number" name="bathrooms" id="bathrooms" />
-            </div>
-            <br />
-            <div>
-                <label for="bathrooms">Babathrooms</label>
+                <label for="bathrooms">Bathrooms</label>
                 <input type="number" name="bathrooms" id="bathrooms" />
             </div>
             <br />
@@ -41,9 +36,16 @@
                     Pets
                     <input type="checkbox" name="pets" id="pets"/>
                 </label>
-                
             </div>
             <br />
+            <div>
+                <label for="date">Date Available</label>
+                <input type="date" name="date" ihd="date" />
+            </div>
+            <br />
+            <div>
+                <input type="submit" value="Submit">
+            </div>
         </form>
     </main>
 </body>
