Ch4: More HTML Elements

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/apartments.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Apartment Search</h1>
     <form>
-        <label for="apartment">Location</label>
+        <label for="location">Location</label>
         <input type="text">
         <br><br>
         <label for="price">Monthly Rent</label>
