--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/Select boxes and text areas/datalist.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/Select boxes and text areas/datalist.html
@@ -39,6 +39,7 @@
     min="0"
     max="100"
     />
+    <!-- Datalists enable custom entries not listed.  Datalist allows entering values not in the predined list -->
     <datalist id="tickmarks">
         <option value="0"></option>
         <option value="10"></option>
