Ch4: More HTML Elements: audio and video

--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/audio and video tags/video.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/audio and video tags/video.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>HTML and CSS Video tags</h1>
-    <video src="video1.mov" type="video/quicktime"></video>
+    <video src="video1.mov" type="video/quicktime" controls></video>
+
+    <!-- Autoplay -->
+    <!-- <video src="video1.mov" type="video/quicktime" autoplay controls></video> -->
+
+    <!-- Loop -->
+    <video src="video1.mov" type="video/quicktime" loop controls></video>
 </body>
 </html>
