--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/audio and video tags/video.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/audio and video tags/video.html
@@ -7,12 +7,21 @@
 </head>
 <body>
     <h1>HTML and CSS Video tags</h1>
-    <video src="video1.mov" type="video/quicktime" controls></video>
+    <!-- <video src="video1.mov" type="video/quicktime" controls></video> -->
 
     <!-- Autoplay -->
     <!-- <video src="video1.mov" type="video/quicktime" autoplay controls></video> -->
 
     <!-- Loop -->
-    <video src="video1.mov" type="video/quicktime" loop controls></video>
+    <!-- <video src="video1.mov" type="video/quicktime" loop controls></video> -->
+
+    <!-- Mute -->
+    <!-- <video src="video1.mov" type="video/quicktime" muted controls></video> -->
+
+    <figure>
+        <video src="video1.mov" type="video/quicktime" controls></video>
+        <figcaption>Video 1</figcaption>
+    </figure>
+    
 </body>
 </html>
