--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/tables/table.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/tables/table.html
@@ -13,7 +13,8 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
-                <th>Telephone Numbers</th>
+                <th colspan="2">Telephone Numbers</th>
+                
             </tr>
         </thead>
         <tbody>
@@ -21,11 +22,15 @@
                 <td>John</td>
                 <td>Doe</td>
                 <td>john@gmail.com</td>
+                <td>555-555-5555</td>
+                <td>111-111-1111</td>
             </tr>
             <tr>
                 <td>John</td>
                 <td>Doe</td>
                 <td>john@gmail.com</td>
+                <td>555-555-5555</td>
+                <td>111-111-1111</td>
             </tr>
         </tbody>
         
