--- a/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/tables/table.html
+++ b/Modern_HTML_CSS_Traversy/HTML/HTML Fundamentals/tables/table.html
@@ -8,6 +8,10 @@
 <body>
     <h1>HTML - Tables</h1>
     <table>
+        <colgroup>
+            <col style="background-color: aqua;" />
+            <col style="background-color: darkcyan;" />
+        </colgroup>
         <thead>
             <tr>
                 <th>First Name</th>
