Ch5: CSS fundatmentals

--- a/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/background.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/background.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="background.css">
     <title>Document</title>
 </head>
 <body>
     <div>
         <h1>Welcome</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, excepturi ex! Earum cumque quo facilis atque rerum velit eligendi repellendus nisi nulla iusto. Unde ratione iste, consectetur culpa perferendis distinctio.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, excepturi ex! Earum cumque quo facilis atque rerum velit eligendi repellendus nisi nulla iusto. Unde ratione iste, consectetur culpa perferendis distinctio.
+
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, aliquam soluta? Delectus assumenda blanditiis doloribus veritatis dolor. Vero aliquid impedit earum mollitia est quas error perferendis accusantium quasi eum fugiat, exercitationem magni autem deleniti quisquam facere nesciunt sapiente obcaecati ipsam ducimus nam. Ea eum rerum assumenda amet architecto ut at quia labore fugit, consequatur aut, consectetur porro sequi aliquid. Quas quaerat atque similique ad placeat dicta ducimus blanditiis rem dolores, neque non ab provident quibusdam magnam autem incidunt dignissimos distinctio perspiciatis. Sequi, fugit numquam quod ad quas nam autem, sed consequuntur repellendus minima, omnis vero eveniet. Dolor unde labore alias!
+        </p>
     </div>
+
 </body>
 </html>
