Ch5: CSS fundatmentals - CSS Challenge

--- a/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/css_challenge.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/css_challenge.html
@@ -20,5 +20,13 @@
             <li><a href="">Reebok Classics</a></li>
         </ul>
     </nav>
+
+    <section>
+        <p>We have the best selection for old school and new era sneakers</p>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur animi cum quas et commodi veniam quibusdam ex id, aspernatur, tenetur porro, esse totam nesciunt culpa repellendus asperiores accusamus cupiditate dignissimos!
+        </p>
+    </section>
 </body>
 </html>
