--- a/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/css_challenge.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/css_challenge.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css_challenge.css">
     <title>Document</title>
 </head>
@@ -25,7 +26,7 @@
     </nav>
 
     <section>
-        <p>We have the best selection for old school and new era sneakers</p>
+        <p class="lead">We have the best selection for old school and new era sneakers</p>
 
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur animi cum quas et commodi veniam quibusdam ex id, aspernatur, tenetur porro, esse totam nesciunt culpa repellendus asperiores accusamus cupiditate dignissimos!
