CSS - Box Model

--- a/Modern_HTML_CSS_Traversy/CSS/Box models/box-model.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Box models/box-model.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="box-model.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,14 +18,14 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima libero sapiente quasi perferendis distinctio id ab nemo, eveniet atque minus rem, doloremque dolorum aliquid repudiandae quidem neque possimus! Nihil, delectus.
         </p>
     </div>
-    <div class="box box-1">
-        <h3>Box 1</h3>
+    <div class="box box-2">
+        <h3>Box 2</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima libero sapiente quasi perferendis distinctio id ab nemo, eveniet atque minus rem, doloremque dolorum aliquid repudiandae quidem neque possimus! Nihil, delectus.
         </p>
     </div>
-    <div class="box box-1">
-        <h3>Box 1</h3>
+    <div class="box box-3">
+        <h3>Box 3</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima libero sapiente quasi perferendis distinctio id ab nemo, eveniet atque minus rem, doloremque dolorum aliquid repudiandae quidem neque possimus! Nihil, delectus.
         </p>
