CSS Display and Position properties

--- a/Modern_HTML_CSS_Traversy/CSS/Box models/positioning.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Box models/positioning.html
@@ -13,12 +13,14 @@
         <div class="box box-1">Static</div>
         <div class="box box-2">Relative</div>
         <div class="box box-3">Fixed</div>
-        <div class="box box-4">Sticky</div>
+        <div class="box box-4">Sticky</div> 
+        <!-- Sticky is a combination of Relative and Fixed -->
         <div class="box box-5">
             Box 5
             <div class="box box-6">Absolute</div>
         </div>
         
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, cupiditate perspiciatis! Tempore debitis aliquid ea suscipit illo quo et maxime enim tenetur vel itaque laudantium molestias sapiente, commodi sint asperiores recusandae quod delectus. Reprehenderit est sequi dolor laboriosam vel facere fugit vitae dolore pariatur aperiam modi aliquid iusto architecto corrupti, quae illo eum doloremque. Facilis suscipit iure cumque voluptate quidem harum magni quibusdam consectetur. Voluptates aspernatur rem eius tempore nulla quasi alias quo aliquid, commodi cupiditate pariatur aut quisquam debitis error voluptatibus consequuntur quaerat consequatur molestias fuga facilis omnis, doloribus reprehenderit. Quod, modi ratione possimus porro ipsa, voluptatem sint tempora blanditiis provident odio nulla unde cum eum animi, pariatur dolor earum dolore minima cupiditate! Quia cum sapiente unde fugit obcaecati repudiandae, mollitia maxime laboriosam voluptatibus laudantium consectetur, minus enim corrupti labore saepe hic qui? Laudantium dolore est expedita eaque quo. Eaque nihil magni ut delectus atque nisi aspernatur tenetur, recusandae eum a iure, eos, accusamus saepe quos ullam ipsum iste excepturi corrupti dolorem. Quo natus dolor alias quidem explicabo aperiam consectetur obcaecati provident optio qui magnam dicta corrupti enim dignissimos fugit pariatur mollitia, distinctio quos ullam illo quae odio aliquid cumque. Ipsa minima obcaecati nulla nobis doloremque magni assumenda repellendus quisquam odit reprehenderit dolorum laboriosam facilis, neque accusamus veritatis id illum illo est rerum? Perspiciatis fuga nam sapiente suscipit eveniet reprehenderit dicta beatae quam explicabo vel placeat, deleniti exercitationem voluptate animi vero quibusdam asperiores repudiandae, ullam quod ratione. Saepe, doloribus accusamus eos iure laborum est error dignissimos reprehenderit reiciendis tenetur quae ex obcaecati distinctio id beatae! Numquam tempora consequatur ut harum, iusto distinctio asperiores officiis magnam nobis deserunt architecto quod sunt incidunt. Ab, eius delectus modi, dolor necessitatibus consequatur reprehenderit corrupti enim quos itaque quas aperiam nobis molestiae eum quidem, neque exercitationem magni porro at voluptatibus tempora. Assumenda, porro nesciunt.</p>
     </section>
 </body>
 </html>
