--- a/Modern_HTML_CSS_Traversy/CSS/form_project/form_challenge.html
+++ b/Modern_HTML_CSS_Traversy/CSS/form_project/form_challenge.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="form_challenge.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML and CSS Freelance Form Project</h1>
-
-    <div class="container">
-        <div>
-            <h3>Need to hire a freelancer</h3>
+    <main class="container">
+        <div class="card">
+            <h1>Need to hire a freelancer</h1>
             <p>Sign up, type in what you need and receive free quotes in seconds.</p>
 
+            <form>
+                <div class="form-group">
+                    <input type="text" id="text" name="text" placeholder="What do you need done?">
+                </div>
+                <div class="form-group">
+                    <button type="submit">Post a Project</button>
+                </div>
+            </form>
         </div>
-        <div>
-            <input type="text">
-        </div>
-    </div>
+    </main>
 </body>
 </html>
