--- a/Modern_HTML_CSS_Traversy/CSS/Flexbox/flex-containers.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Flexbox/flex-containers.html
@@ -12,6 +12,11 @@
         <div class="flex-item">Item 1</div>
         <div class="flex-item">Item 2</div>
         <div class="flex-item">Item 3</div>
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item">Item 2</div>
+        <div class="flex-item">Item 3</div>
+        <div class="flex-item">Item 1</div>
+        <div class="flex-item">Item 2</div>
     </div>
 </body>
 </html>
